--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "format": "prettier --check --ignore-unknown",
     "format:fix": "prettier --write --ignore-unknown",
     "prepare": "husky",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx src/db/migrate.ts",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^15.3.5",
+    "@polar-sh/nextjs": "^0.7.0",
+    "@polar-sh/sdk": "^0.41.1",
     "@react-email/components": "^0.0.36",
     "@react-email/tailwind": "^1.0.2",
     "@strapi/blocks-react-renderer": "^1.0.2",
@@ -23,17 +30,27 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.0.12",
     "babel-plugin-react-compiler": "^19.0.0-beta-40c6c23-20250301",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.6",
+    "drizzle-orm": "^0.44.7",
+    "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.1",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.27.0",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.9.0",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
@@ -49,6 +66,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "rimraf": "^6.0.0",
     "tailwindcss": "^3.4.4",
+    "tsx": "^4.20.6",
     "typescript": "^5.5.3"
   },
   "lint-staged": {
